--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "production": "forever ./bin/www"
   },
   "dependencies": {
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
-    "forever": "^0.15.3",
-    "morgan": "~1.7.0",
+    "debug": "^4.1.0",
+    "express": "^4.14.0",
+    "forever": "^1.0.0",
+    "morgan": "^1.7.0",
+    "nodemon": "^1.19.2",
     "pug": "^2.0.0-beta6"
   },
   "description": "A training application for freecodecamp.com",
@@ -27,10 +28,10 @@
   },
   "homepage": "https://github.com/tuxitop/timestamp-microservice#readme",
   "devDependencies": {
-    "mocha": "^3.2.0",
-    "supertest": "^2.0.1"
+    "mocha": "^6.2.0",
+    "supertest": "^4.0.1"
   },
   "engines": {
-    "node": "7.10.x"
+    "node": "12.10.x"
   }
 }
