--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {
     "start": "nodemon ./bin/www",
     "test": "mocha",
-    "production": "forever ./bin/www"
+    "production": "pm2 start ./bin/www --no-daemon --no-vizion"
   },
   "dependencies": {
     "debug": "^4.1.0",
     "express": "^4.14.0",
-    "forever": "^1.0.0",
     "morgan": "^1.7.0",
     "nodemon": "^1.19.2",
+    "pm2": "^3.5.1",
     "pug": "^2.0.0-beta6"
   },
   "description": "A training application for freecodecamp.com",
